# ChangeLog for virtual/perl-Test-Harness
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Test-Harness/ChangeLog,v 1.37 2009/03/13 21:51:23 tove Exp $

  13 Mar 2009; Torsten Veller <tove@gentoo.org>
  -perl-Test-Harness-2.56.ebuild, -perl-Test-Harness-3.14.ebuild:
  Cleanup

*perl-Test-Harness-3.16 (20 Feb 2009)

  20 Feb 2009; Torsten Veller <tove@gentoo.org>
  -perl-Test-Harness-3.15.ebuild, +perl-Test-Harness-3.16.ebuild:
  Version bump. Cleanup

*perl-Test-Harness-3.15 (18 Feb 2009)

  18 Feb 2009; Torsten Veller <tove@gentoo.org>
  +perl-Test-Harness-3.15.ebuild:
  Version bump

  30 Jan 2009; Torsten Veller <tove@gentoo.org> metadata.xml,
  -perl-Test-Harness-2.62.ebuild, -perl-Test-Harness-3.12.ebuild,
  -perl-Test-Harness-3.13.ebuild:
  Cleanup

*perl-Test-Harness-3.14 (15 Sep 2008)

  15 Sep 2008; Torsten Veller <tove@gentoo.org>
  +perl-Test-Harness-3.14.ebuild:
  Version bump

*perl-Test-Harness-3.13 (28 Jul 2008)

  28 Jul 2008; Torsten Veller <tove@gentoo.org>
  +perl-Test-Harness-3.13.ebuild:
  Version bump

  15 Jul 2008; Raúl Porcel <armin76@gentoo.org>
  perl-Test-Harness-3.10.ebuild:
  alpha/ia64/sparc/x86 stable

*perl-Test-Harness-3.12 (04 Jul 2008)

  04 Jul 2008; Torsten Veller <tove@gentoo.org>
  +perl-Test-Harness-3.12.ebuild:
  Version bump (#228057)

*perl-Test-Harness-3.10 (09 May 2008)

  09 May 2008; Torsten Veller <tove@gentoo.org>
  +perl-Test-Harness-3.10.ebuild:
  #219484 - Version bump

  31 Mar 2008; Jeroen Roovers <jer@gentoo.org>
  perl-Test-Harness-2.64.ebuild:
  Stable for HPPA too.

  29 Dec 2007; <welp@gentoo.org> perl-Test-Harness-2.64.ebuild:
  Keyworded ~sparc-fbsd; bug 203655

  11 May 2007; Joshua Kinard <kumba@gentoo.org>
  perl-Test-Harness-2.64.ebuild:
  Stable on mips.

  07 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  perl-Test-Harness-2.64.ebuild:
  ppc stable

  15 Apr 2007; Markus Rothe <corsair@gentoo.org>