@@ -1,15 +1,0 @@
-# Copyright 1999-2008 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Test-Harness/perl-Test-Harness-3.14.ebuild,v 1.1 2008/09/15 07:22:55 tove Exp $
-
-DESCRIPTION="Virtual for Test-Harness"
-HOMEPAGE="http://www.gentoo.org/proj/en/perl/"
-SRC_URI=""
-
-LICENSE="GPL-2"
-SLOT="0"
-KEYWORDS="~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris"
-IUSE=""
-
-DEPEND=""
-RDEPEND="~perl-core/Test-Harness-${PV}"
