@@ -1,6 +1,12 @@
 # ChangeLog for virtual/perl-Test-Harness
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Test-Harness/ChangeLog,v 1.37 2009/03/13 21:51:23 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Test-Harness/ChangeLog,v 1.38 2009/05/06 08:16:55 tove Exp $
+
+*perl-Test-Harness-3.17 (06 May 2009)
+
+  06 May 2009; Torsten Veller <tove@gentoo.org>
+  +perl-Test-Harness-3.17.ebuild:
+  Version bump
 
   13 Mar 2009; Torsten Veller <tove@gentoo.org>
   -perl-Test-Harness-2.56.ebuild, -perl-Test-Harness-3.14.ebuild:
